basic html layout created with hero section, event section, weather section, and footer

--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
 
     <title>Eventz</title>
 
@@ -22,6 +20,132 @@
   </head>
 
   <body>
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
+      <div class="container">
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Eventz</a>
+        <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          
+          <i class="fa fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item mx-0 mx-lg-1">
+              <a id="signin" class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#signin">Sign In</a>
+            </li>
+            <li class="nav-item mx-0 mx-lg-1">
+              <a id="signup" class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#signup">Sign Up</a>
+            </li>
+            <li class="nav-item mx-0 mx-lg-1">
+              <a id="logout" class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#logout">Logout</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!-- Header -->
+    <header class="masthead bg-primary text-center">
+      <div class="container">
+        <img class="img-fluid" src="#" alt="">
+        <h1 class="text-uppercase">EVENTZ</h1>
+        <hr class="star-light">
+        <h2 class="font-weight-light">Display some main event here</h2>
+      </div>
+    </header>
+
+    <!-- Event Grid Section -->
+    <section class="events" id="events">
+      <div class="container">
+        <h2 class="text-center text-uppercase text-secondary mb-0">Events</h2>
+        <hr class="">
+        <div class="row">
+          <div class="col-md-12">
+            EVENT
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            EVENT
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            EVENT
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Weather Section -->
+    <section class="bg-primary text-white" id="weather">
+      <div class="container">
+        <h2 class="text-center text-uppercase text-white">Weather for {city}</h2>
+        <hr class="star-light">
+        <div class="row">
+          <div class="col-lg-4 ml-auto">
+            <p class="">Display some weather here</p>
+          </div>
+          <div class="col-lg-4 mr-auto">
+            <p class="">Display some weather here</p>
+          </div>
+        </div>
+        <div class="text-center mt-4">
+          <a class="btn btn-xl btn-outline-light" href="#">
+            Load more weather?
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <h4 class="text-uppercase mb-4">Location</h4>
+            <p class="lead">1234 Thecoolest Dr.
+              <br>Morrisville, NC</p>
+          </div>
+          <div class="col-md-4">
+            <h4 class="text-uppercase mb-4">Around the Web</h4>
+            <ul class="list-inline">
+              <li class="list-inline-item">
+                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+                  <i class="fab fa-facebook"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+                  <i class="fab fa-google-plus-square"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+                  <i class="fab fa-twitter-square"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+                  <i class="fab fa-instagram"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-4">
+            <h4 class="text-uppercase mb-4">About Eventz</h4>
+            <p class="lead mb-0">Eventz is the baddest search site out there.</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <div class="copyright py-4 text-center text-white">
+      <div class="container">
+        <small>Copyright &copy; Eventz</small>
+      </div>
+    </div>
 
     <!-- All the JavaScripts -->
     <!-- include font awesome library for icons -->
