adding logo and updating colors

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">Eventz</a>
+        <img src="assets/images/eventz-logo.png" style="height: 55px; -webkit-filter: drop-shadow(3px 2px 40px #d0d0d0); filter: drop-shadow(3px 2px 40px #d0d0d0);">
         <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           
           <i class="fa fa-bars"></i>
@@ -51,7 +52,7 @@
         <img class="img-fluid" src="#" alt="">
         <h1 class="text-uppercase">EVENTZ</h1>
         <hr class="star-light">
-        <h2 class="font-weight-light">Display some main event here</h2>
+        <h2 class="font-weight-light">Display some main event here?</h2>
       </div>
     </header>
 
@@ -62,17 +63,17 @@
         <hr class="">
         <div class="row">
           <div class="col-md-12">
-            EVENT
+            EVENT?
           </div>
         </div>
         <div class="row">
           <div class="col-md-12">
-            EVENT
+            EVENT?
           </div>
         </div>
         <div class="row">
           <div class="col-md-12">
-            EVENT
+            EVENT?
           </div>
         </div>
       </div>
@@ -81,14 +82,14 @@
     <!-- Weather Section -->
     <section class="bg-primary text-white" id="weather">
       <div class="container">
-        <h2 class="text-center text-uppercase text-white">Weather for {city}</h2>
+        <h2 class="text-center text-uppercase text-white">Weather for {city}?</h2>
         <hr class="star-light">
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p class="">Display some weather here</p>
+            <p class="">Display some weather here?</p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p class="">Display some weather here</p>
+            <p class="">Display some weather here?</p>
           </div>
         </div>
         <div class="text-center mt-4">
@@ -109,7 +110,7 @@
               <br>Morrisville, NC</p>
           </div>
           <div class="col-md-4">
-            <h4 class="text-uppercase mb-4">Around the Web</h4>
+            <h4 class="text-uppercase mb-4">Socialize with us!</h4>
             <ul class="list-inline">
               <li class="list-inline-item">
                 <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
