--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
     <div class="copyright py-4 text-center text-white">
       <div class="container">
-        <small>Copyright &copy; Eventz</small>
+        <small>Listin' eventz since 2018.</small>
       </div>
     </div>
 
