--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item mx-0 mx-lg-1">
-              <a id="signin" class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#signin">Sign In</a>
+              <a id="signin" class="nav-link rounded" href="#signin">Sign In</a>
             </li>
             <li class="nav-item mx-0 mx-lg-1">
-              <a id="signup" class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#signup">Sign Up</a>
+              <a id="signup" class="nav-link rounded" href="#signup">Sign Up</a>
             </li>
             <li class="nav-item mx-0 mx-lg-1">
-              <a id="logout" class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#logout">Logout</a>
+              <a id="logout" class="nav-link rounded" href="#logout">Logout</a>
             </li>
           </ul>
         </div>
