--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item mx-0 mx-lg-1">
+            <li class="nav-item">
               <a id="signin" class="nav-link rounded" href="#signin">Sign In</a>
             </li>
-            <li class="nav-item mx-0 mx-lg-1">
+            <li class="nav-item">
               <a id="signup" class="nav-link rounded" href="#signup">Sign Up</a>
             </li>
-            <li class="nav-item mx-0 mx-lg-1">
+            <li class="nav-item">
               <a id="logout" class="nav-link rounded" href="#logout">Logout</a>
             </li>
           </ul>
