adding html event elements to the page at our events id

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">Eventz</a>
-        <img src="assets/images/eventz-logo.png" style="height: 55px; -webkit-filter: drop-shadow(3px 2px 40px #d0d0d0); filter: drop-shadow(3px 2px 40px #d0d0d0);">
+        <img src="assets/images/eventz-logo.png">
         <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           
           <i class="fa fa-bars"></i>
@@ -60,22 +60,30 @@
     <section class="events" id="events">
       <div class="container">
         <h2 class="text-center text-uppercase text-secondary mb-0">Events</h2>
-        <hr class="">
-        <div class="row">
-          <div class="col-md-12">
-            EVENT?
+        <!-- THIS HTML THAT IS COMMENTED OUT IS THE EVENT TEMPLATE.
+            WE TOOK THIS TEMPLATE AND LOOPED THROUGH IT IN OUR JAVASCRIPT
+            TO CREATE A LIST, AND APPENDED THAT LIST HERE. WE WILL REMOVE THIS
+            WHEN WE SUBMIT OUR FINAL PROJECT. LEAVING THIS IN HERE FOR NOW FOR
+            REFERENCING
+         -->
+          <!-- <div class="row">
+            <div class="col-md-12 event-item">
+              <div class="col-md-3 float-left">
+                <img src="${eventImage}">
+              </div>
+              <div class="col-md-6 float-left text-left">
+                <h6>${eventName}</h6>
+                <h4>Venue: ${venueName}</h4>
+                <h6>${eventDate}</h6>
+                <button class="btn btn-venue-details">Venue Details</button>
+                <button class="btn btn-event-details">Event Details</button>
+              </div>
+              <div class="col-md-3 float-left">
+                <h6>Eric's weather widget here</h6>
+              </div>
+            </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            EVENT?
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            EVENT?
-          </div>
-        </div>
+          <hr> -->
       </div>
     </section>
 
