--- a/index.html
+++ b/index.html
@@ -49,10 +49,19 @@
     <!-- Header -->
     <header class="masthead bg-primary text-center">
       <div class="container">
-        <img class="img-fluid" src="#" alt="">
-        <h1 class="text-uppercase">EVENTZ</h1>
-        <hr class="star-light">
-        <h2 class="font-weight-light">Display some main event here?</h2>
+        <div class="col-md-4 float-left">
+          <form class="navbar-form navbar-left" role="search">
+            <div class="form-group search-form">
+              <h6 class="text-left">Search Eventz</h6>
+              <input id="search-event" type="text" class="form-control" placeholder="Eventz">
+              <input id="search-zipcode" type="text" class="form-control" placeholder="Zip Code">
+            </div>
+            <button id="search" type="submit" class="btn btn-search-submit float-left">Search</button>
+          </form>
+        </div>
+          <div class="col-md-8 float-left">
+            <h4>Eventz is a great way to search for popular events by zip code!</h4>
+          </div>
       </div>
     </header>
 
