--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Eventz</a>
+        <a class="navbar-brand" href="#">Eventz</a>
         <img src="assets/images/eventz-logo.png">
         <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           
@@ -69,6 +69,9 @@
     <section class="events" id="events">
       <div class="container">
         <h2 class="text-center text-uppercase text-secondary mb-0">Events</h2>
+        <div class="events-list">
+          
+        </div>
         <!-- THIS HTML THAT IS COMMENTED OUT IS THE EVENT TEMPLATE.
             WE TOOK THIS TEMPLATE AND LOOPED THROUGH IT IN OUR JAVASCRIPT
             TO CREATE A LIST, AND APPENDED THAT LIST HERE. WE WILL REMOVE THIS
