allowing users to search by city and state as well as zip code

--- a/index.html
+++ b/index.html
@@ -54,13 +54,15 @@
             <div class="form-group search-form">
               <h6 class="text-left">Search Eventz</h6>
               <input id="search-event" type="text" class="form-control" placeholder="Eventz">
+              <input id="search-city" type="text" class="form-control" placeholder="City">
+              <input id="search-state" type="text" class="form-control" placeholder="State">
               <input id="search-zipcode" type="text" class="form-control" placeholder="Zip Code">
             </div>
             <button id="search" type="submit" class="btn btn-search-submit float-left">Search</button>
           </form>
         </div>
           <div class="col-md-8 float-left">
-            <h4>Eventz is a great way to search for popular events by zip code!</h4>
+            <h4>Eventz is a great way to search for popular events by city, state and or zip code!</h4>
           </div>
       </div>
     </header>
