--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <!-- Custom JavaScripts -->
     <script src="assets/js/main.js"></script>
     <script src="assets/js/ticketmaster.js"></script>
-
+    <script src="assets/js/weatherbit.js"></script>
   </body>
 
 </html>
