--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!-- Event Grid Section -->
     <section class="events" id="events">
       <div class="container">
-        <h2 class="text-center text-uppercase text-secondary mb-0">Events</h2>
+        <h2 class="text-center text-uppercase text-secondary mb-0" style="margin-bottom: 30px !important;">Events</h2>
         <div class="events-list">
           
         </div>
@@ -173,6 +173,7 @@
     <!-- All the JavaScripts -->
     <!-- include font awesome library for icons -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.css" />
     <!-- include moment.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.0/moment.js"></script>
     <!-- include jquery -->
