--- a/index.html
+++ b/index.html
@@ -180,7 +180,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- include bootstrap js -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
     <!-- Custom JavaScripts -->
+    <script src="assets/js/database.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="assets/js/ticketmaster.js"></script>
     <script src="assets/js/weatherbit.js"></script>
