adding html structure to masthead to hold results from database. all static for now

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <!-- Header -->
     <header class="masthead bg-primary text-center">
       <div class="container">
+        <h4>Eventz is a great way to search for popular events by city, state and or zip code!</h4>
         <div class="col-md-4 float-left">
           <form class="navbar-form navbar-left" role="search">
             <div class="form-group search-form">
@@ -61,8 +62,18 @@
             <button id="search" type="submit" class="btn btn-search-submit float-left">Search</button>
           </form>
         </div>
-          <div class="col-md-8 float-left">
-            <h4>Eventz is a great way to search for popular events by city, state and or zip code!</h4>
+          <div class="col-md-8 float-left text-left">
+            <div class="">
+              <div>Suggested Searches</div>
+              <div>
+                <div>Most Recent Event Searches:</div>
+                <div><button class="btn searches">baseball</button></div>
+              </div>
+            </div>
+            <div class="">Most Popular Event Searches: </div>
+              <div><button class="btn searches">baseball</button></div>
+            <div class="">Popular Cities: </div>
+              <div><button class="btn searches">baseball</button></div>
           </div>
       </div>
     </header>
