creating the button features in the masthead to pre populate the form

--- a/index.html
+++ b/index.html
@@ -67,13 +67,11 @@
               <div>Suggested Searches</div>
               <div>
                 <div>Most Recent Event Searches:</div>
-                <div><button class="btn searches">baseball</button></div>
+                <div id="recent-event-searches"></div>
               </div>
             </div>
             <div class="">Most Popular Event Searches: </div>
-              <div><button class="btn searches">baseball</button></div>
-            <div class="">Popular Cities: </div>
-              <div><button class="btn searches">baseball</button></div>
+              <div id="popular-event-searches"></div>
           </div>
       </div>
     </header>
@@ -195,6 +193,7 @@
     <!-- Custom JavaScripts -->
     <script src="assets/js/database.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/popular-search.js"></script>
     <script src="assets/js/ticketmaster.js"></script>
     <script src="assets/js/weatherbit.js"></script>
   </body>
