--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
     <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
       <div class="container">
         <a class="navbar-brand" href="#">Eventz</a>
-        <a href="assets/images/eventz-logo.png" data-lightbox="image-1" data-title="My caption"><img src="assets/images/eventz-logo.png"></a>
-        <!-- <img data-lightbox="image-1" src="assets/images/eventz-logo.png"> -->
+        <img src="assets/images/eventz-logo.png">
         <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           
           <i class="fa fa-bars"></i>
