adding isotope feature to the event list

--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
     <section class="events" id="events">
       <div class="container">
         <h2 class="text-center text-uppercase text-secondary mb-0" style="margin-bottom: 30px !important;">Events</h2>
+        <div>Filter by category:</div>
+        <div id="category-buttons"></div>
         <div class="events-list">
           
         </div>
@@ -193,6 +195,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <!-- include lightbox js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.10.0/js/lightbox.min.js"></script>
+    <!-- include isotope js -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/3.0.6/isotope.pkgd.min.js"></script> -->
+    <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
     <!-- Custom JavaScripts -->
     <script src="assets/js/database.js"></script>
