Revert "Added code to verify correct format for zipcode and limited users to …"

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>Eventz</title>
-    <!-- include awesomeplete library for autocompletion -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/awesomplete/1.1.2/awesomplete.min.css" />
+
     <!-- include bootstrap library for bootstrap css -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- include lightbox css -->
@@ -22,8 +21,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <!-- Custom styles -->
     <link href="assets/stylesheets/styles.css" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/awesomplete/1.1.2/awesomplete.js"></script>
-    
+
   </head>
 
   <body>
@@ -63,9 +61,7 @@
               <h6 class="text-left">Search Eventz</h6>
               <input id="search-event" type="text" class="form-control" placeholder="Eventz">
               <input id="search-city" type="text" class="form-control" placeholder="City">
-              <!-- <input id="search-state" type="text" class="form-control" placeholder="State"> -->
-              <select id="search-state" class="form-control" placeholder="State">
-                <option selected>Choose a State...</option>
+              <input id="search-state" type="text" class="form-control" placeholder="State">
               <input id="search-zipcode" type="text" class="form-control" placeholder="Zip Code">
             </div>
             <button id="search" type="submit" class="btn btn-search-submit float-left">Search</button>
