--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
     <script src="assets/js/popular-search.js"></script>
     <script src="assets/js/ticketmaster.js"></script>
     <script src="assets/js/weatherbit.js"></script>
+    <script src="assets/js/openweather.js"></script>
   </body>
 
 </html>
