setting up save to favorites

--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
     <script src="assets/js/ticketmaster.js"></script>
     <script src="assets/js/weatherbit.js"></script>
     <script src="assets/js/openweather.js"></script>
+    <script src="assets/js/save-to-favorites.js"></script>
   </body>
 
 </html>
