changing divs to modals

--- a/index.html
+++ b/index.html
@@ -192,6 +192,19 @@
       </div>
     </footer>
 
+    <!-- Modal -->
+    <div class="container">
+      <!-- Modal -->
+      <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog">
+          <!-- Modal content-->
+          <div class="modal-content">
+
+          </div>
+        </div>
+      </div>
+    </div> <!-- end modal -->
+
     <div class="copyright py-4 text-center text-white">
       <div class="container">
         <small>Listin' eventz since 2018.</small>
