styled up the search form

--- a/index.html
+++ b/index.html
@@ -128,10 +128,22 @@
           <form class="navbar-form navbar-left" role="search">
             <div class="form-group search-form">
               <h6 class="text-left">Search Eventz</h6>
-              <input id="search-event" type="text" class="form-control" placeholder="Eventz">
-              <input id="search-city" type="text" class="form-control" placeholder="City">
-              <input id="search-state" type="text" class="form-control" placeholder="State">
-              <input id="search-zipcode" type="text" class="form-control" placeholder="Zip Code">
+              <div class="col-12">
+                <input id="search-event" class="effect-1" type="text" placeholder="Eventz">
+                <span class="focus-border"></span>
+              </div>
+              <div class="col-12">
+                <input id="search-city" class="effect-1" type="text" placeholder="City">
+                <span class="focus-border"></span>
+              </div>
+              <div class="col-12">
+                <input id="search-state" class="effect-1" type="text" placeholder="State">
+                <span class="focus-border"></span>
+              </div>
+              <div class="col-12">
+                <input id="search-zipcode" class="effect-1" maxlength="5" type="text" placeholder="Zip Code">
+                <span class="focus-border"></span>
+              </div>
             </div>
             <button id="search" type="submit" class="btn btn-search-submit float-left">Search</button>
           </form>
