adding id to event modal so it doesnt conflict with sign up modal

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
       <div class="modal fade" id="myModal" role="dialog">
         <div class="modal-dialog">
           <!-- Modal content-->
-          <div class="modal-content">
+          <div id="event-modal" class="modal-content">
 
           </div>
         </div>
