adding search form validation messages

--- a/index.html
+++ b/index.html
@@ -300,6 +300,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.0/moment.js"></script>
     <!-- include jquery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- include jquery ui -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <!-- include bootstrap js -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <!-- include lightbox js -->
@@ -317,6 +319,7 @@
     <script src="assets/js/weatherbit.js"></script>
     <script src="assets/js/openweather.js"></script>
     <script src="assets/js/save-to-favorites.js"></script>
+    <script src="assets/js/search-validation.js"></script>
   </body>
 
 </html>
