changed the weather widget

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     <section id="weather" class="bg-primary text-white">
       <div class="container">
       
-        <h2 class="text-center text-uppercase text-white">Search Weather for {City}</h2>
+        <h2 class="text-center text-uppercase text-white">Search Weather for {<span id="cityName">City</span>}</h2>
         <hr class="star-light">
         
         <div id="weatherWidget" class="row">
