--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <span class="focus-border"></span>
               </div>
             </div>
-            <button id="search" type="submit" class="btn btn-search-submit float-left">Search</button>
+            <button id="search" type="submit" class="btn btn-search-submit float-left"><i class="fas fa-search"></i> Search</button>
           </form>
         </div>
           <div class="col-md-8 float-left text-left">
